// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > snapshot: checked prop 1`] = `
<span
  class="ucl-uikit-checkbox css-1d2h38k"
>
  <input
    checked=""
    class="css-nzy7im"
    data-testid="ucl-uikit-checkbox"
    type="checkbox"
  />
  <svg
    class="ucl-icon css-1nacdsu"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="square"
    stroke-linejoin="miter"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="17 9 10 16 7 13"
    />
  </svg>
</span>
`;

exports[`Checkbox > snapshot: indeterminate prop 1`] = `
<span
  class="ucl-uikit-checkbox css-1d2h38k"
>
  <input
    class="css-nzy7im"
    data-testid="ucl-uikit-checkbox"
    type="checkbox"
  />
  <svg
    class="ucl-icon css-2i3jn5"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="square"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="7"
      x2="17"
      y1="12"
      y2="12"
    />
  </svg>
</span>
`;

exports[`Checkbox > snapshot: no props 1`] = `
<span
  class="ucl-uikit-checkbox css-70heco"
>
  <input
    class="css-nzy7im"
    data-testid="ucl-uikit-checkbox"
    type="checkbox"
  />
</span>
`;

exports[`Checkbox > snapshot: testId prop 1`] = `
<span
  class="ucl-uikit-checkbox css-70heco"
>
  <input
    class="css-nzy7im"
    data-testid="test123"
    type="checkbox"
  />
</span>
`;
